# daupi

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: main_io.h
src/: CMakeLists.txt  main.cpp
src/Audio/: Audio_parametrs.h  audio.cpp  audio.h
src/Client/: client.cpp  client.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  tst_server.cpp
